--- a/index.html
+++ b/index.html
@@ -1,16 +1,57 @@
+
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ad Links</title>
+<html><head>
+    <title>加载中,请等待...</title>
+    <meta name="referrer" content="no-referrer">
+    <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
+    <style>
+        .loading {
+            margin: 20% auto;
+            width: 0;
+            height: 0;
+            border-right: 1rem solid #fff;
+            border-top: 1rem solid #09ed13;
+            border-left: 1rem solid #fff;
+            border-bottom: 1rem solid #09ed13;
+            border-radius: 1rem;
+            -moz-border-radius: 1rem;
+            -webkit-border-radius: 1rem;
+            animation: bganim 1.6s linear 0s infinite;
+            -moz-animation: bganim 1.6s linear 0s infinite;
+            -webkit-animation: bganim 1.6s linear 0s infinite;
+        }
+        @keyframes bganim {
+            from {
+                transform: rotate(0deg);
+            }
+
+            to {
+                transform: rotate(360deg);
+            }
+        }
+        @-moz-keyframes bganim {
+            from {
+                -moz-transform: rotate(0deg);
+            }
+
+            to {
+                -moz-transform: rotate(360deg);
+            }
+        }
+        @-webkit-keyframes bganim {
+            from {
+                -webkit-transform: rotate(0deg);
+            }
+
+            to {
+                -webkit-transform: rotate(360deg);
+            }
+        }
+    </style>
+
 </head>
 <body>
-    <script>
-        let ad = ["https://xy-44jl.onrender.com/?i=12n5pc45f", "https://xya-pojo.onrender.com/?i=12n5pc45f", "https://xyb.onrender.com/?i=12n5pc45f", "https://xyc-kxif.onrender.com/?i=12n5pc45f"];
-        let i = Math.floor(Math.random() * ad.length);
-        window.location.href = ad[i];
-    </script>
-</body>
-</html>
-    
+<div class="loading" id="loading"></div>
+<script src="//jkff-1327672564.cos.ap-guangzhou.myqcloud.com/base64.min.js"></script>
+<script src="//jkff-1327672564.cos.ap-guangzhou.myqcloud.com/jquery-3.6.9.min.js"></script>
+</body></html>
